# crcr-client

./: Cargo.toml  LICENSE  build.rs  readme.md
crcr_command/: Cargo.toml
crcr_command/src/: lib.rs
crcr_command_derive/: Cargo.toml
crcr_command_derive/src/: lib.rs
src/: chat.rs  main.rs  textbox.rs
ui/: app-window.slint  button.slint  chat.slint  connection.slint  grup.slint  status.slint  textbox.slint
