[package]
name = "crcr-client"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
slint = "1.8.0"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "fs"] }
mlab_http = { git = "https://github.com/Monolith-Innovation-Labs/mlab-http.git" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
quote = "1.0.37"
syn = "2.0.79"
crcr_command_derive = { path = "crcr_command_derive" }
crcr_command = { path = "crcr_command" }

[build-dependencies]
slint-build = "1.7.2"

